; ModuleID = '/home/carl/AnghaBench/git/compat/regex/extr_regexec.c_re_search.c'
source_filename = "/home/carl/AnghaBench/git/compat/regex/extr_regexec.c_re_search.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.re_pattern_buffer = type { i32 }
%struct.re_registers = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @re_search(%struct.re_pattern_buffer* %0, i8* %1, i32 %2, i32 %3, i32 %4, %struct.re_registers* %5) #0 {
  %7 = alloca %struct.re_pattern_buffer*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.re_registers*, align 8
  store %struct.re_pattern_buffer* %0, %struct.re_pattern_buffer** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct.re_registers* %5, %struct.re_registers** %12, align 8
  %13 = load %struct.re_pattern_buffer*, %struct.re_pattern_buffer** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %11, align 4
  %18 = load i32, i32* %9, align 4
  %19 = load %struct.re_registers*, %struct.re_registers** %12, align 8
  %20 = call i32 @re_search_stub(%struct.re_pattern_buffer* %13, i8* %14, i32 %15, i32 %16, i32 %17, i32 %18, %struct.re_registers* %19, i32 0)
  ret i32 %20
}

declare dso_local i32 @re_search_stub(%struct.re_pattern_buffer*, i8*, i32, i32, i32, i32, %struct.re_registers*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
